# calendar_maker

./: README.md  calendar_config.json  cli.py  main.py  maxim_shemetov.json  maxim_shemetov1.json  maxim_shemetov2.json  maxim_shemetov3.json  maxim_shemetov4.json  new_ui.py  pyproject.toml  requirements.txt  run_generator.py  run_ui.py  settings.json  temp_config.json  test_calendar.py  ui.py  задание.txt
assets/: .gitkeep
assets/img/: template200x200.psd
calendar_core/: __init__.py  calendar_builder.py  calendar_factory.py
config/: __init__.py  calendar_config.py  sample_config.json
docs/: PILLOW_GUIDE.md
models/: __init__.py  day.py  holiday.py  month.py  special_day.py  week.py  weekday.py
renderers/: __init__.py  base_renderer.py  multi_page_notes_renderer.py  multi_page_renderer.py  single_page_renderer.py
src/: __init__.py  calendar_generator.py  day_renderer.py  month_renderer.py
src/features/: __init__.py
src/ui/: __init__.py  config_editor.py  main_window.py  preview_thread.py  preview_widget.py  spec_days_editor.py
src/ui/editors/: __init__.py  (+4 more)
src/ui_components/: __init__.py  main_window.py  preview.py
src/utils/: __init__.py  background_binder.py  date_utils.py  font_manager.py  image_utils.py  ratio_img.py  spec_day_generator.py  text_parser.py
test/text_convertation/: output.json  test_convertation_spec_days.txt
ui/: __init__.py  calendar_widget.py  main_window.py  settings_dialog.py  settings_tabs.py
ui_components/: __init__.py  constants.py  helpers.py  main_window.py
utils/: image_utils.py
wb/: crop_image.py  templater.py
(+28 files in other folders)
